# lkgb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: Hadoop_2k.csv  demo.csv  demo_out.csv  raw.csv  test2.csv  test_out.csv  with_template.csv
data/logs/: test.ttl  train.csv
lkgb/: __init__.py  __main__.py  backend.py  config.py  parser.py  reports.py  store.py  tools.py
lkgb/parser/: __init__.py  models.py  parser.py
lkgb/store/: __init__.py  dataset.py  driver.py  module.py  ontology.py  store.py
notebooks/: hadoop_to_csv.ipynb  onto_neo4j_vec.ipynb  parser_rag_embed.ipynb
ontologies/: logs.ttl
parser/: __main__.py  accuracy.py  chain.py  config.py  vectore_store.py
resources/data/: test.csv  test.ttl  train.csv  train.ttl
resources/ontologies/: logs_dictionary.ttl
resources/prompts/: build_graph.system.md
rov_parser/: __init__.py  __main__.py  accuracy.py  backend.py  chain.py  config.py  ontology.py  parser.py  reports.py  store.py  vector_store.py  vectore_store.py
test/: logs.csv
