[tool.poetry]
name = "rov_parser"
version = "0.1.0"
description = ""
authors = ["Luca Cotti <luca.cotti@unibs.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-chroma = "^0.2.2"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
torch = "^2.6.0"
langchain-huggingface = "^0.1.2"
sentence-transformers = "^3.4.1"
accelerate = "^1.4.0"
einops = "^0.8.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.ollama.dependencies]
langchain-ollama = "^0.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
]