[tool.poetry]
name = "lkgb"
version = "0.1.0"
description = ""
authors = ["Luca Cotti <luca.cotti@unibs.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.18"
langchain-community = "^0.3.17"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
neo4j = "^5.28.1"
pydantic = "^2.10.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.9.7"
pre-commit = "^4.1.0"

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
torch = "^2.6.0"
langchain-huggingface = "^0.1.2"
sentence-transformers = "^3.4.1"
accelerate = "^1.4.0"
einops = "^0.8.1"

[tool.poetry.group.ollama]
optional = true

[tool.poetry.group.ollama.dependencies]
langchain-ollama = "^0.2.3"

[tool.poetry.scripts]
parse = "lkgb.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    "D103", # Missing docstring in public function
    "D107",
    "D203",
    "D213",
    "E402",
    "TD002", # Missing author in todo
    "TD003", # Missing issue link in todo 
]